--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ warp = "0.2"
 parking_lot = "0.10.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "0.2", features = ["macros"] }
+tch = {version = "0.13.0"}
